fix: slogan size on smaller screens

--- a/src/styles/views/home.module.sass
+++ b/src/styles/views/home.module.sass
@@ -25,7 +25,7 @@
       line-height: 1.1em
 
       @media screen and (max-width: variables.$smaller-screen)
-        font-size: 4.8em
+        font-size: 4.6em
 
       @media screen and (max-width: variables.$mobile-screen)
         font-size: 2.2em
